feat:adding info about docker install